useBean 예제 연습(태그 잘못 닫으면 출력 잘못됨...)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -8,6 +8,7 @@
 	<p><a href = "0">test1</a>
 	<p><a href = "3_1">예제 3-1</a>
 	<p><a href = "4_3">예제 4-3</a>
+	<p><a href = "4_8">예제 4-8</a>
 
 	
 </body>
