예쩨 9-2 연습(다국어 처리)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -29,6 +29,11 @@
 	
 	<p><a href = "8_4">예제 8-4</a>
 	
+	<hr>
+	
+	<p><a href = "9_1">예제 9-1</a>
+	<p><a href = "9_2">예제 9-2</a>
+	
 
 </body>
 </html>
