--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -13,6 +13,7 @@
 	<hr>
 	
 	<p><a href = "5_1">예제 5-1</a>
+	<p><a href = "5_2">예제 5-2</a>
 	<p><a href = "5_4">예제 5-4</a>
 	<p><a href = "5_8">예제 5-8</a>
 	
