set bundle 예제 연습

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -36,6 +36,7 @@
 	<p><a href = "9_1">예제 9-1</a>
 	<p><a href = "9_2">예제 9-2</a>
 	<p><a href = "bun">bundle 태그</a>
+	<p><a href = "set">set bundle 태그</a>
 	
 
 </body>
