--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -38,5 +38,6 @@
 	<p><a href = "bun">bundle 태그</a>
 	
 	<p><a href = "chap03_1">챕터3 연습문제1</a>
+	<p><a href = "chap03_2">챕터3 연습문제2</a>
 </body>
 </html>
