--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -39,5 +39,6 @@
 	
 	<p><a href = "chap03_1">챕터3 연습문제1</a>
 	<p><a href = "chap03_2">챕터3 연습문제2</a>
+	<p><a href = "chap03_3">챕터3 연습문제3</a>
 </body>
 </html>
