--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -37,6 +37,8 @@
 	<p><a href = "9_2">예제 9-2</a>
 	<p><a href = "bun">bundle 태그</a>
 	
+	<p><a href = "chap02_1">챕터2 연습문제1</a>
+	
 	<p><a href = "chap03_1">챕터3 연습문제1</a>
 	<p><a href = "chap03_2">챕터3 연습문제2</a>
 	<p><a href = "chap03_3">챕터3 연습문제3</a>
