챕터2 연습문제2 연습(스크립틀릿 사용, 현재 날짜 출력)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -38,6 +38,7 @@
 	<p><a href = "bun">bundle 태그</a>
 	
 	<p><a href = "chap02_1">챕터2 연습문제1</a>
+	<p><a href = "chap02_2">챕터2 연습문제2</a>
 	
 	<p><a href = "chap03_1">챕터3 연습문제1</a>
 	<p><a href = "chap03_2">챕터3 연습문제2</a>
