챕터5 연습문제1 연습 (request 내장 객체 이용)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -39,9 +39,13 @@
 	
 	<p><a href = "chap02_1">챕터2 연습문제1</a>
 	<p><a href = "chap02_2">챕터2 연습문제2</a>
+	<p><a href = "chap02_3">챕터2 연습문제3</a>
 	
 	<p><a href = "chap03_1">챕터3 연습문제1</a>
 	<p><a href = "chap03_2">챕터3 연습문제2</a>
 	<p><a href = "chap03_3">챕터3 연습문제3</a>
+	
+	<p><a href = "chap05_1">챕터5 연습문제1</a>
+	
 </body>
 </html>
