--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -46,6 +46,7 @@
 	<p><a href = "chap03_3">챕터3 연습문제3</a>
 	
 	<p><a href = "chap05_1">챕터5 연습문제1</a>
+	<p><a href = "chap05_2">챕터5 연습문제2</a>
 	
 </body>
 </html>
