예제 13-1 연습(session)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -48,5 +48,9 @@
 	<p><a href = "chap05_1">챕터5 연습문제1</a>
 	<p><a href = "chap05_2">챕터5 연습문제2</a>
 	
+	<hr>
+	
+	<p><a href = "13_1">예제 13-1</a>
+	
 </body>
 </html>
