--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -53,6 +53,7 @@
 	<p><a href = "13_1">예제 13-1</a>
 	<p><a href = "13_2">예제 13-2</a>
 	<p><a href = "13_3">예제 13-3</a>
+	<p><a href = "13_4">예제 13-4</a>
 	
 </body>
 </html>
