예제 13-5 연습(session 속성 삭제2)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -54,6 +54,7 @@
 	<p><a href = "13_2">예제 13-2</a>
 	<p><a href = "13_3">예제 13-3</a>
 	<p><a href = "13_4">예제 13-4</a>
+	<p><a href = "13_5">예제 13-5</a>
 	
 </body>
 </html>
