--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -55,6 +55,7 @@
 	<p><a href = "13_3">예제 13-3</a>
 	<p><a href = "13_4">예제 13-4</a>
 	<p><a href = "13_5">예제 13-5</a>
+	<p><a href = "13_6">예제 13-6</a>
 	
 </body>
 </html>
