예제13-8 연습(session id 와 웹 사이트에서 유지한 시간 출력)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -57,6 +57,7 @@
 	<p><a href = "13_5">예제 13-5</a>
 	<p><a href = "13_6">예제 13-6</a>
 	<p><a href = "13_7">예제 13-7</a>
+	<p><a href = "13_8">예제 13-8</a>
 	
 </body>
 </html>
