예제 14-1 연습(쿠키 생성)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -59,5 +59,8 @@
 	<p><a href = "13_7">예제 13-7</a>
 	<p><a href = "13_8">예제 13-8</a>
 	
+	<hr>
+	
+	<p><a href = "14_1">예제 14-1</a>
 </body>
 </html>
