--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -13,6 +13,7 @@
 	<p><a href = "3_11">예제 3-11</a>
 		
 	<p><a href = "4_3">예제 4-3</a>
+	<p><a href = "4_4">예제 4-4</a>
 	<p><a href = "4_8">예제 4-8</a>
 	
 	<hr>
