예제 16-7 응용 연습(equals 를 == 로 바꾸어보았다)

--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -80,5 +80,7 @@
 	<p><a href = "16_1">예제 16-1</a>
 	<p><a href = "16_3">예제 16-3</a>
 	<p><a href = "16_5">예제 16-5</a>
+	<p><a href = "16_7">예제 16-7</a>
+	<p><a href = "16_7_c">예제 16-7-c</a>
 </body>
 </html>
