--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -82,5 +82,6 @@
 	<p><a href = "16_5">예제 16-5</a>
 	<p><a href = "16_7">예제 16-7</a>
 	<p><a href = "16_7_c">예제 16-7-c</a>
+	<p><a href = "16_9">예제 16-9</a>
 </body>
 </html>
