--- a/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
+++ b/JSP_connected_with_gitHub/src/main/webapp/JSP_example.html
@@ -62,6 +62,10 @@
 	
 	<hr>
 	
+	<p><a href = "12_1">예제 12-1</a>
+
+	
+	<hr>
 	<p><a href = "13_1">예제 13-1</a>
 	<p><a href = "13_2">예제 13-2</a>
 	<p><a href = "13_3">예제 13-3</a>
